[package]
name = "build-your-own-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
clippy = "0.0.302"
rust-format = "0.3.4"
tokio = { version = "1.23.0", features = ["full"] } # async networking
